Improve overflow behavior of comments view Fixes #143827

--- a/src/vs/workbench/contrib/comments/browser/media/panel.css
+++ b/src/vs/workbench/contrib/comments/browser/media/panel.css
@@ -24,10 +24,16 @@
 	display: block;
 }
 
+.comments-panel .comments-panel-container .tree-container .comment-thread-container div {
+	overflow: hidden;
+}
+
 .comments-panel .comments-panel-container .tree-container .resource-container,
 .comments-panel .comments-panel-container .tree-container .comment-thread-container .comment-metadata-container,
 .comments-panel .comments-panel-container .tree-container .comment-thread-container .comment-snippet-container {
 	display: flex;
+	text-overflow: ellipsis;
+	overflow: hidden;
 }
 
 .comments-panel .count,
